--- a/admin/MasterPageAdmin.master
+++ b/admin/MasterPageAdmin.master
@@ -13,9 +13,15 @@
 <body>    
     <div id="div_cabecera">
         <div class="div_centrado">
-            <div id="divMenuIzqda"></div>
-                <img src="../images/CrackCompany.png" alt="Crack Company" title="Crack Company" border="0" />
-            <div id="divMenuDcha"></div>            
+            <div id="divMenuIzqda">
+                <a href="#" class="links">Buscar Proyecto</a><br />
+                <a href="#" class="links">Newsletter</a>
+            </div>
+            <div id="divMenuCentro"><img src="../images/CrackCompany.png" alt="Crack Company" title="Crack Company" border="0" /></div>
+            <div id="divMenuDcha">
+                Bienvenid@, <%=nombre%><br />
+                <a href="cerrarSession.aspx" class="linksRojo"><img src="images/Desconectar.png" alt="Desconectar" title="Desconectar" width="16px" height="16px" style="vertical-align:middle;" border="0"/>&nbsp;Desconectar</a>
+            </div>            
         </div>
     </div>
     <div class="div_centrado">
