--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -47,11 +47,21 @@ body
 #divMenuIzqda
 {
     float:left;    
+    margin-left:5px;   
+    text-align:left; 
+}
+
+#divMenuCentro
+{
+    float:left;    
+    margin-left:310px;    
 }
 
 #divMenuDcha
 {
-    float:right;    
+    float:right; 
+    margin-right:5px;           
+    text-align:right;    
 }
 
 #div_pie
@@ -70,6 +80,20 @@ body
     text-align:center;    
 }
 
+.divContenidoGestor
+{
+    width:95%;
+    margin:auto;
+    margin-bottom:60px;   
+}
+
+.caja_logo
+{
+    float:left;
+    padding:7px;
+    width:200px;    
+}
+
 /* fin Capas */
 
 /* Textos */
@@ -79,7 +103,62 @@ body
     color:#990000;    
 }
 
+.titulo
+{
+    font-family:Times New Roman;
+    font-size:32px;    
+}
+
+.subtitulo
+{
+    font-family:Alte,Alte2;
+    font-size:13px;        
+}
+
+.fila_error
+{
+    border:#000000 1px solid;
+    background-color:#FFFFFF;
+    color:#990000;  
+    min-height:50px;
+    padding:5px;
+    margin-bottom:20px; 
+    text-align:center;        
+}
+
 /* fin Textos */
+
+/* Links */
+
+A.links
+{
+    color:#000000;
+    text-decoration:none;
+    outline:none;	
+}
+
+A.links:hover
+{
+    color:#00C76E;    	 
+	text-decoration:none;
+	outline:none;
+}
+
+A.linksRojo
+{
+    color:#000000;
+    text-decoration:none;	
+    outline:none;
+}
+
+A.linksRojo:hover
+{
+    color:#990000;    	 
+	text-decoration:none;
+	outline:none;
+}
+
+/* fin Links */
 
 /* Formularios */
 
