--- a/admin/MasterPageAdmin.master
+++ b/admin/MasterPageAdmin.master
@@ -7,6 +7,7 @@
     <title>Crack Company - Administraci&oacute;n</title>
     <link href="../styles/estilo.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <asp:ContentPlaceHolder id="head" runat="server">        
     </asp:ContentPlaceHolder>
 </head>
