--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -29,8 +29,7 @@ body
 .div_centrado
 {
 	margin:auto;
-	width: 1024px;
-	z-index:1;	
+	width: 1024px;		
 }
 		
 #div_cabecera
@@ -41,7 +40,9 @@ body
     text-align:center;
     padding-top:45px; 
     padding-bottom:45px; 
-    border-bottom:#8A8A8A 2px solid;        
+    border-bottom:#8A8A8A 2px solid; 
+    z-index:10; 
+    position:relative;         
 }
 
 #divMenuIzqda
@@ -77,7 +78,7 @@ body
 
 .divCentrado
 {
-    text-align:center;    
+    text-align:center; 
 }
 
 .divContenidoGestor
@@ -91,8 +92,22 @@ body
 {
     float:left;    
     padding:28px;
-    width:200px;    
+    height:280px;    
+    width:200px;        
 }
+
+#divLogos
+{
+    z-index:1;        
+}
+
+#divEspacio
+{
+    position:absolute;
+    bottom:-200px;
+    height:150px;     
+}
+
 
 /* fin Capas */
 
@@ -256,3 +271,28 @@ A.linksRojo:hover
     }    
 
     /* fin Clases PopUps */
+
+/* fin Pop Ups*/
+
+/* Panel Descripciones */
+
+.panelAdmin{
+	width: 98%;
+	position: absolute;	
+	margin-left:-150%;
+	z-index:2;
+	-webkit-transition: all .6s ease-in-out;
+	-moz-transition: all .6s ease-in-out;
+	-o-transition: all .6s ease-in-out;
+	-ms-transition: all .6s ease-in-out;
+	transition: all .6s ease-in-out;	
+}
+.panelAdmin:target{
+	margin-left: 0%;	
+	left:0px;
+	width:100%;	
+	height:100%;
+	background-color: #F3F3F3;		
+}
+
+/* fin Panel Descripciones */
