--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -15,7 +15,7 @@ body
 {
 	font-size:14px;
 	font-family:Alte,Alte2;
-	background-color:#F3F3F3; 
+	background-color:#FFFFFF; 
 	height:auto;
 	padding:0px 0px 0px 0px;
 	margin:0px 0px 0px 0px;
@@ -45,29 +45,9 @@ body
     position:relative;         
 }
 
-#divMenuIzqda
-{
-    float:left;    
-    margin-left:5px;   
-    text-align:left; 
-}
-
-#divMenuCentro
-{
-    float:left;    
-    margin-left:310px;    
-}
-
-#divMenuDcha
-{
-    float:right; 
-    margin-right:5px;           
-    text-align:right;    
-}
-
 #div_pie
 {
-    bottom:0px;
+    bottom:0px;    
     position:fixed;
     width:100%;
     height:30px;
@@ -113,13 +93,20 @@ body
 {
     position:absolute;
     bottom:-200px;
-    height:150px;     
+    height:150px;         
 }
 
 
 /* fin Capas */
 
 /* Textos */
+
+.texto
+{
+    font-size:14px;
+	font-family:Alte,Alte2;
+	text-align:justify;	   
+}
 
 .texto_rojo
 {
@@ -146,7 +133,22 @@ body
     min-height:50px;
     padding:5px;
     margin-bottom:20px; 
-    text-align:center;        
+    text-align:center;
+    font-size:14px;
+	font-family:Alte,Alte2;        
+}
+
+.fila_acierto
+{
+    border:#00C76E 1px solid;
+    background-color:#FFFFFF;
+    color:#00C76E;  
+    min-height:50px;
+    padding:5px;
+    margin-bottom:20px; 
+    text-align:center;
+    font-size:14px;
+	font-family:Alte,Alte2;        
 }
 
 .titulo_caja_logo
@@ -159,6 +161,41 @@ body
 {
     font-family:Alte,Alte2;
     font-size:14px;    
+}
+
+.titulo_caja_about
+{
+    margin-top:5px;
+    font-family:Times New Roman;
+    font-size:20px;      
+}
+
+.titulo_about
+{
+    font-family:Times New Roman;
+    font-size:30px; 
+}
+
+.cursivaGran
+{
+    font-family:Times New Roman;
+    font-size:18px;
+    font-style:italic;   
+    margin-top:-5px;
+    margin-bottom:-3px;      
+}
+
+.texto_url
+{
+    font-size:12px;
+	font-family:Alte,Alte2;    
+}
+
+.citas
+{
+    font-family:Mission,Mission2;   
+    font-size:28px;
+    text-align:right;     
 }
 
 /* fin Textos */
@@ -207,7 +244,7 @@ A.linksRojo:hover
 	height:80px;
 	width:80px;
 	padding:0px 8px; 
-	background:#000000;
+	background:#00C76E;
 	cursor:pointer; 
 	outline:none;
 }
@@ -222,29 +259,66 @@ A.linksRojo:hover
 	height:80px;
 	width:80px;	
 	padding:0px 8px; 
-	background:#00C76E;
+	background:#000000;
 	cursor:pointer; 
 	outline:none;
 }
 
 .formulario
 {
-    font-family:Arial;
-	font-size:14px;
+    font-size:14px;
 	color:#BDBDBD;
-	border:#BDBDBD solid 1px;
+	border:#FFFFFF solid 1px;
 	background:#FFFFFF;	
+	padding-top:5px;   
+    padding-bottom:5px;  
+	padding-left:5px;  
+    padding-right:5px;
 	outline:none;
 }
 
 .formulario:focus
 {
-    font-family:Arial;
     font-size:14px;
 	color:#000000;
-    border:#000000 solid 1px;
+    border:#00C76E solid 1px;
     background:#FFFFFF;	
+    padding-top:5px;   
+    padding-bottom:5px;  
+    padding-left:5px;  
+    padding-right:5px;
     outline:none;
+}
+
+.formulario_contacto
+{
+    border:#FFFFFF 1px solid;
+    outline:none;
+    background-color:#FFFFFF;
+    vertical-align:top;
+    height:150px;
+    color:#BDBDBD;
+    font-size:14px;      
+    overflow:hidden;
+    padding-top:5px;   
+    padding-bottom:5px;  
+    padding-left:5px;  
+    padding-right:5px;   
+    resize:none;         
+}
+   
+.formulario_contacto:focus
+{
+    border:#00C76E 1px solid;
+    outline:none;
+    vertical-align:top;    
+    height:150px;    
+    color:#000000;
+    padding-top:5px;   
+    padding-bottom:5px;  
+    padding-left:5px;  
+    padding-right:5px; 
+    resize:none;        
 }
 
 /* fin formularios*/
@@ -264,6 +338,13 @@ A.linksRojo:hover
     {
         float:right;
         margin-top:5px;
+        margin-right:5px;            
+    }      
+          
+     .div_TituloVentanaAbout
+    {
+        float:right;
+        margin-top:-20px;
         margin-right:5px;            
     }      
           
@@ -304,3 +385,39 @@ A.linksRojo:hover
 }
 
 /* fin Panel Descripciones */
+
+/* Abouts */
+
+#fotacaPakrolsky
+{   
+    float:left;
+    margin-top:-34px; 
+	margin-left:-230px;
+	height:742px;		
+}
+
+#fotacaBidezabal
+{   
+    float:left;
+    margin-top:-34px; 
+	margin-left:-280px;
+	height:742px;		
+}
+
+.div_Textaco
+{
+    float:right;
+    width:580px;
+    margin-top:-710px;    
+}
+
+.div_Cita
+{
+    float:right;
+    font-family:Mission,Mission2;   
+    font-size:28px;
+    text-align:right; 
+    margin-top:-290px;   
+}
+
+/* fin About */
